HIRE-19: corrected layout bug

--- a/src/main/java/assets/less/modules/profile-page.less
+++ b/src/main/java/assets/less/modules/profile-page.less
@@ -75,6 +75,11 @@
       }
 
       #upload {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100px;
+          height: 100px;
         #image-wrapper {
           background: #d2d6de;
           position: absolute;
